@@ -6,21 +6,21 @@
 }
 
 
-@manual{lgtuserman2380,
+@manual{lgtuserman2390,
 	author = {Paulo Moura},
-	howpublished = {http://logtalk.org/papers/userman.pdf},
-	month = dec,
-	title = {Logtalk 2.38 User Manual},
-	year = 2009
+	howpublished = {http://logtalk.org/papers/lgtuserman2390.pdf},
+	month = feb,
+	title = {Logtalk 2.39.0 User Manual},
+	year = 2010
 }
 
 
-@manual{lgturefman2380,
+@manual{lgturefman2390,
 	author = {Paulo Moura},
-	howpublished = {http://logtalk.org/papers/refman.pdf},
-	month = dec,
-	title = {Logtalk 2.38 Reference Manual},
-	year = 2009
+	howpublished = {http://logtalk.org/papers/refman2390.pdf},
+	month = feb,
+	title = {Logtalk 2.39.0 Reference Manual},
+	year = 2010
 }
 
 
