@@ -261,7 +261,7 @@ to a conjunction or disjunction of objects is removed in this version.
 Logtalk version 2.38.0 changes representation of the execution context in 
 compiled predicates, requiring recompilation of all objects and categories.
 
-Logtalk 2.39.1 changes the semantics of the parameter/2 built-in methods when
+Logtalk 2.39.0 changes the semantics of the parameter/2 built-in methods when
 used in categories and removes an overly restrictive safety rule used when
 compiling meta-predicates. Recompilation of all objects and categories is
 strongly recommended.
