@@ -522,7 +522,7 @@ begin
     InstalledVersion := 0
   else
     InstalledVersion := -1;
-  if IsAdminLoggedOn and (InstalledVersion >= 0) and (InstalledVersion < 2371) then
+  if IsAdminLoggedOn and (InstalledVersion >= 0) and (InstalledVersion < 2391) then
   begin
     Warning := 'You have an older version of Logtalk installed whose configuration files are incompatible with this new version.'
                + Chr(13) + Chr(13)
